# robert-desktop

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PHASE_0_TASKS.md  PRD.md  README.md  REFACTORING_SUMMARY.md  SAFETY_PRIVACY.md  SCRIPT_FORMAT.md  TODO.md  browser-automation-prd-revised.md  browser-automation-revised-plan.md  docker-compose.test.yml
.cargo/: config.toml
.claude/: TODO.md  profiles-implementation-plan.md  settings.json
.claude/agents/: engineer.md
.claude/commands/: commit.md  issue.md  issuesfix.md  issuestriage.md  lint.md  memo.md  pullrequest.md
.github/workflows/: ci.yml  e2e-test.yml  nightly.yml  release.yml  tauri-build-test.yml  tests.yml  ts-quality.yml  update-manifest.yml
agent-formats/: INDEX.md  README.md
agent-formats/specs/: AGENT_WORKFLOW_STANDARDS.md  STEP_FRAME_SCHEMA.md
archive/: browser-automation-implementation-plan.md  browser-automation-prd.md  consistency-review.md
crates/robert-app/: .prettierignore  MIGRATION_TO_VANILLA_SVELTE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
crates/robert-app-backup/: Cargo.toml
crates/robert-app-backup/src/: lib.rs
crates/robert-app/src/: App.svelte  app.css
crates/robert-app/src-sveltekit-backup/components/: DebugView.svelte
crates/robert-app/src-sveltekit-backup/lib/: events.ts  tauri.ts  types.ts
crates/robert-app/src-sveltekit-backup/routes/: +page.svelte
crates/robert-app/src-tauri/: Cargo.toml  click_result.json  output_content.json  sign_in_click_result.json  tauri.conf.json
crates/robert-app/src-tauri/capabilities/: default.json
crates/robert-app/src-tauri/src/: lib.rs  main.rs  setup.rs
crates/robert-app/src-tauri/src/agent/: config.rs  mod.rs  prompts.rs  workflow.rs
crates/robert-app/src-tauri/src/claude/: health.rs  mod.rs
crates/robert-app/src-tauri/src/commands/: agent.rs  browser.rs  developer_mode.rs  feedback.rs  logging.rs  mod.rs  profiles.rs  query.rs
crates/robert-app/src-tauri/src/developer_mode/: mod.rs  test_server.rs  tests.rs
crates/robert-app/src-tauri/src/events/: mod.rs
crates/robert-app/src-tauri/src/logging/: logger.rs  mod.rs  storage.rs
crates/robert-app/src-tauri/src/profiles/: auth.rs  browser.rs  command.rs  crypto.rs  manager.rs  markdown.rs  mod.rs  storage.rs  types.rs
crates/robert-app/src-tauri/src/profiles/browser/: launcher.rs  mod.rs  profile.rs  session.rs
crates/robert-app/src-tauri/src/state/: mod.rs
crates/robert-app/src-tauri/tests/: browser_session_integration.rs  developer_mode_integration.rs  e2e_developer_mode.rs
crates/robert-app/src/components/: BrowserSessionManager.svelte  CdpDebugger.svelte  ChatArea.svelte  (+16 more)
crates/robert-cli/: Cargo.toml  README.md
crates/robert-cli/src/: main.rs
crates/robert-core/: Cargo.toml  README.md
crates/robert-core/src/: agent.rs  claude.rs  context.rs  ingest.rs  lib.rs  memory.rs  pruning.rs  search.rs
crates/robert-core/src/llm/: local.rs  mod.rs
crates/robert-downloader/: Cargo.toml
crates/robert-downloader/src/: lib.rs  model_downloader.rs
crates/robert-downloader/tests/: integration_tests.rs
crates/robert-graph/: Cargo.toml  README.md
crates/robert-graph/src/: ephemeral_graph.rs  ingest.rs  lib.rs  query.rs  surreal_store.rs
crates/robert-server/: Cargo.toml  README.md  config.dev.toml
crates/robert-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  server.rs  session.rs
crates/robert-server/src/api/: execute.rs  health.rs  inference.rs  mod.rs  sessions.rs
crates/robert-server/src/claude/: executor.rs  mock.rs  mod.rs
crates/robert-server/tests/: integration_tests.rs
crates/robert-webdriver/: CHAT_UI.md  Cargo.toml  README.md
crates/robert-webdriver/examples/: cdp_system_demo.rs  chat_ui_demo.rs
crates/robert-webdriver/src/: chat_ui.js  error.rs  lib.rs  main.rs  step_frame.rs
crates/robert-webdriver/src/browser/: chat.rs  chrome.rs  mod.rs
crates/robert-webdriver/src/cdp/: claude_prompt.rs  executor.rs  generator.rs  validation.rs
crates/robert-webdriver/tests/: README.md  TEST_ORGANIZATION.md  cdp_execution_test.rs  cdp_generator_test.rs  cdp_script_execution_test.rs  chat_ui_test.rs  e2e.rs  headless_integration.rs  integration_test.rs  meta_infrastructure_test.rs  screenshot_hang_test.rs  screenshot_test.rs  step_frame_test.rs  test_server.rs  validation_test.rs
crates/types/: Cargo.toml
crates/types/src/profiles/: command_md.rs  crypto.rs  manager.rs  mod.rs  storage.rs
docs/: ARCHITECTURE_DECISIONS.md  HARDENING_PLAN.md  HYPOTHESIS.md  IMPLEMENTATION_PLAN.md  LINUX_SETUP.md  OTA_UPDATES.md  PITCH.md  PRD.md  PROFILES.md  README.md  ROBERT_SERVER_SPECIFICATION.md  SCREENSHOT_TESTING.md  SCRIPT_FORMAT.md  SETUP_OTA_KEYS.md  STEP_FRAME_IMPLEMENTATION.md  TESTING.md  TEST_ORGANIZATION.md  TS_CODE_QUALITY.md  USER_PROFILES_PRIVACY.md  build-instructions.md  chat-ui.md  implementation-plan.md  linux-setup.md  rag-overview.md  robert_generation_approach.md  step-frame-implementation.md
docs/agent-files/: AGENT_WORKFLOW_STANDARDS.md  INDEX.md  QUICK_REFERENCE.md  README.md  STEP_FRAME_SCHEMA.md  agent-workflow-standards.md  quick-reference.md  workflow-graph-schema.md
docs/architecture/: adr-standalone-webdriver.md  architecture-decisions.md  robert-server-specification.md  standalone-webdriver-plan.md
docs/architecture/decisions/: README.md  adr-001-core-crate-structure.md  adr-002-hybrid-graph-architecture.md  adr-002-surrealdb-only-graph.md  adr-003-robert-server-architecture.md  adr-004-split-brain-generation.md  adr-005-rig-adoption-rejected.md  adr-006-local-llm-requirement.md  adr-007-custom-rust-agent.md
docs/browser-driver/: PROFILES.md  README.md  VISUALDOM_FORMAT.md  developer_mode.md
docs/development/: screenshot-testing.md  testing.md
docs/features/: ota-implementation-summary.md  step-frame-implementation.md
docs/product/: competition.md  go-to-market.md  hypothesis.md
examples/: claude-integration-example.ts
scripts/: run-tests.sh  setup-linux-dev.sh
(+8 files in other folders)
