[workspace]
resolver = "2"
members = [
    "crates/robert-app/src-tauri",
    "crates/robert-cli",
    "crates/robert-graph",
    "crates/robert-core",
    "crates/robert-downloader",
]
# Exclude Tauri app from default builds (requires GTK/Pango system libraries)
# To build the Tauri app: cargo build -p robert-app
default-members = [
    "crates/robert-graph",
    "crates/robert-core",
]

[workspace.dependencies]
# Shared dependencies across all crates
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Browser automation - spider_chrome (maintained fork of chromiumoxide)
# spider_chrome = "2.37"
# spider_chromiumoxide_fetcher = "0.7"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
# AI & ML
async-openai = { version = "0.31.1", features = ["default"] }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.22.1"
fastembed = "4"
regex = "1.10"

# Database & Graph
surrealdb = { version = "2.0", features = ["kv-rocksdb"] }
petgraph = { version = "0.6", features = ["serde-1"] }

# Tauri
tauri = { version = "2.9", features = [] }
tauri-build = { version = "2.5", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-updater = "2.9"
tauri-plugin-dialog = "2.4"
tauri-plugin-process = "2.3"

# Cryptography & Security
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.6", features = ["derive"] }
hex = "0.4"

# Utilities
dirs = "5.0"
futures = "0.3"
futures-util = "0.3"
base64 = "0.22"
chrono = "0.4"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-test = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "multipart"] }
warp = "0.3"
async-trait = "0.1"
tempfile = "3.8"
hf-hub = { version = "0.4", features = ["tokio"] }
toml = "0.8"
git2 = "0.19"
indicatif = "0.17"
once_cell = "1.19"
pulldown-cmark = "0.9"
serde_yaml = "0.9"
