[workspace]
resolver = "2"
members = [
    "crates/robert-app/src-tauri",
    "crates/robert-cli",
    "crates/robert-graph",
    "crates/robert-core",
    "crates/robert-downloader",
    "crates/robert-server",
    "crates/types",
]
# Exclude Tauri app from default builds (requires GTK/Pango system libraries)
# To build the Tauri app: cargo build -p robert-app
default-members = [
    "crates/robert-cli",
    "crates/robert-server",
]

[workspace.dependencies]
# Robert internal crates
robert-server = { path = "crates/robert-server" }
robert-core = { path = "crates/robert-core" }
robert-graph = { path = "crates/robert-graph" }
robert-types = { path = "crates/types" }

# Shared dependencies across all crates
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# AI & ML
async-openai = { version = "0.31.1", features = ["default"] }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.22.1"
fastembed = "4"
regex = "1.10"

# Database & Graph
surrealdb = { version = "2.0", features = ["kv-rocksdb"] }
petgraph = { version = "0.6", features = ["serde-1"] }

# Tauri
tauri = { version = "2.9", features = [] }
tauri-build = { version = "2.5", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-updater = "2.9"
tauri-plugin-dialog = "2.4"
tauri-plugin-process = "2.3"

# Cryptography & Security
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.6", features = ["derive"] }
hex = "0.4"

# Utilities
dirs = "5.0"
futures = "0.3"
futures-util = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"

# Web / Network
warp = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "multipart"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"
async-trait = "0.1"

# Markdown / Data
pulldown-cmark = "0.9"
serde_yaml = "0.9"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Model downloading
hf-hub = { version = "0.4", features = ["tokio"] }
git2 = "0.19"
indicatif = "0.17"

# Dev
tempfile = "3.8"
tokio-test = "0.4"
