[package]
name = "robert-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "robert"
path = "src/main.rs"

[[bin]]
name = "robert-generate"
path = "src/bin/robert-generate.rs"

[dependencies]
robert-webdriver = { path = "../robert-webdriver" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
