[package]
name = "robert-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
robert-core = { path = "../robert-core" }
robert-downloader = { path = "../robert-downloader" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
