[package]
name = "robert-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
robert-graph = { path = "../robert-graph" }
async-openai = { version = "0.14.0", features = ["default"] }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.15.0"
hf-hub = { workspace = true }
regex = "1.10"


[dev-dependencies]
tokio-test = "0.4"
robert-graph = { path = "../robert-graph", features = ["test-utils"] }
