[package]
name = "robert-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
robert-graph = { path = "../robert-graph" }
async-openai = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
hf-hub = { workspace = true }
regex = { workspace = true }


[dev-dependencies]
tokio-test = "0.4"
robert-graph = { path = "../robert-graph", features = ["test-utils"] }
