[package]
name = "robert-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.11", features = ["stream", "json", "blocking", "multipart"] }
futures-util = "0.3"
git2 = "0.19"
indicatif = "0.17"
sha2 = "0.10"
hex = "0.4"
hf-hub = { version = "0.3.2", features = ["tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = { workspace = true }
