[package]
name = "robert-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures-util = "0.3"
git2 = "0.19"
indicatif = "0.17"
sha2 = { workspace = true }
hex = "0.4"
hf-hub = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
