[package]
name = "robert-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
surrealdb = { workspace = true }
petgraph = { workspace = true }
fastembed = { workspace = true }

[features]
default = []
test-utils = []

[dev-dependencies]
tokio-test = "0.4"
