[package]
name = "robert-server"
version = "1.0.0"
edition = "2021"
authors = ["Robert Team"]
description = "Remote execution server for Robert desktop application - forwards requests to claude-cli"
license = "MIT"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
base64 = "0.22"
toml = "0.8"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-test = "0.4"
tempfile = "3"

[features]
default = []
mock = []

[[bin]]
name = "robert-server"
path = "src/main.rs"

[lib]
name = "robert_server"
path = "src/lib.rs"
