[package]
name = "robert-server"
version = "1.0.0"
edition = "2021"
authors = ["Robert Team"]
description = "Remote execution server for Robert desktop application - forwards requests to claude-cli"
license = "MIT"

[dependencies]
warp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-stream = "0.3"
async-trait = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
mock = []

[[bin]]
name = "robert-server"
path = "src/main.rs"

[lib]
name = "robert_server"
path = "src/lib.rs"
