[package]
name = "robert-webdriver"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
# These dependencies re-export chromiumoxide types that we use
ignored = ["spider_chrome", "spider_chromiumoxide_fetcher"]

[dependencies]
spider_chrome = { workspace = true }
spider_chromiumoxide_fetcher = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }

[dev-dependencies]
warp = "0.3"
reqwest = "0.11"
tokio = { workspace = true }
serde_json = { workspace = true }
spider_chrome = { workspace = true }
anyhow = { workspace = true }
