[package]
name = "robert-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }

# Cryptography
argon2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# Utilities
uuid = { workspace = true }

# Markdown command system
pulldown-cmark = { workspace = true }
serde_yaml = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }
