[package]
name = "robert-app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "robert_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Robert dependencies
robert-webdriver = { path = "../../robert-webdriver" }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4"
warp = "0.3"
reqwest = "0.12"
toml = "0.8"
dirs = "5.0"

# Logging
log = "0.4"
env_logger = "0.11"

