[package]
name = "robert-app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "robert_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-updater = "2.9"
tauri-plugin-dialog = "2.4"
tauri-plugin-process = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Robert dependencies
robert-webdriver = { path = "../../robert-webdriver" }
robert-core = { path = "../../robert-core" }
robert-graph = { path = "../../robert-graph" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
warp = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
dirs = "5.0"

# Logging
log = "0.4"
env_logger = "0.11"

# User Profiles - Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.6", features = ["derive"] }

# User Profiles - Utilities
uuid = { workspace = true }
once_cell = "1.19"

# Markdown command system (Phase 3 refactor)
pulldown-cmark = "0.9"  # Markdown parsing for command files
serde_yaml = "0.9"      # YAML frontmatter parsing

[dev-dependencies]
tempfile = { workspace = true }

